--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,8 @@
         <item name="colorSecondaryVariant">@color/brand_primary_dark</item>
         <item name="colorOnSecondary">@color/black</item>
 
+        <item name="android:textColor">@color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="titleTextColor">@color/white</item>
@@ -65,7 +67,10 @@
         <item name="colorPrimaryVariant">#AFFF</item>
         <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">#AFFF</item>
+
         <item name="android:statusBarColor">#65a8ca</item>
+        <item name="android:textColor">@color/white</item>
+
         <item name="colorControlNormal">#c5c5c5</item>
         <item name="colorControlActivated">@color/white</item>
         <item name="colorControlHighlight">@color/white</item>
